--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@ Tempe, AZ 85287-5706</p>
 </td></tr></table>
 <h2>What's New!</h2>
 <ul>
-<li><p>No update, 7/2018.
-</p>
+<li><p>No update, 7/2018.</p>
 </li>
 </ul>
 <p><br /></p>
@@ -55,7 +54,7 @@ Tempe, AZ 85287-5706</p>
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-07-23 00:22:03 US Mountain Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2018-07-23 00:53:41 US Mountain Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
