--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
 <h2>Affine Abstraction-Based Active Model Discrimination </h2>
 <table class="imgtable"><tr><td>
 <a href="index.html"><img src="AMD.png" alt="Not Available" width="WIDTHpx" height="260px" /></a>&nbsp;</td>
-<td align="left"><p>The dynamics of smart systems, such as smart buildings, autonomous vehicles, and intelligent transportation, are almost always complex (nonlinear or hybrid), it is desirable to compute a simpler conservative approximation or abstraction that “includes” the dynamical characteristics of the original systems, for which (robust) controller/estimator designs may be easier than for the original complex systems.
+<td align="left"><p>The dynamics of smart systems, such as smart buildings, autonomous vehicles, and intelligent transportation, are almost always complex (nonlinear or hybrid). It is desirable to compute a simpler conservative approximation or abstraction that “includes” the dynamical characteristics of the original systems, for which (robust) controller/estimator designs may be easier than for the original complex systems.
 In this project, we design an affine abstraction method to over-approximate the original nonlinear vehicle dynamics and then develop an active model discrimiation approach to actively identify the true intention of the vehicle while simultaneously optimizing for safety and comfort (with minimal change in input). The vehicle's unobserved intentions are assumed to be inattentive, cautious, or aggressive, and each of them can be regarded as a different system operating mode. The active model discrimination problem aims to find optimal separating inputs that guarantee that the outputs of all the affine models cannot be identical over a finite horizon. The developed acitive model discrimination method can also be used to identify a fault type or an attack strategy in cyber-phisical systems.</p>
 </td></tr></table>
 <h2>Fault-Tolerant Control for Spacecraft Attitude Control System</h2>
@@ -56,7 +56,7 @@ reorientation configuration space can be found <a href="https://youtu.be/08bR-m4
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-07-22 22:33:38 US Mountain Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2018-07-23 01:17:30 US Mountain Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
