--- a/projects.html
+++ b/projects.html
@@ -48,7 +48,7 @@ gyro or mission specification requirement, the spacecraft's angular velocity is 
 This research studies the three-axis reorientation problem of a fully actuated rigid-body subject to both of attitude and angular rate constraints. We proposed two strictly convex potential functions for attitude constraint and angular rate constraint, whose global minima locate at their equilibria. Using the sliding mode control technique, an adaptive controller is designed to achieve asymptotic attitude stabilization and satisfy multiple state constraints simultaneously. 
 A clip demonstrating the spacecraft is retargeting its sensitive
 instrument while avoiding four celestial objects in the spacecraft
-reorientation configuration space can be found <a href="https://youtu.be/08bR-m48ymY">here</a>. </p>
+reorientation configuration space can be found <a href="https://youtu.be/08bR-m48ymY"><b>here</b></a>. </p>
 </td></tr></table>
 <div class="infoblock">
 <div class="blockcontent">
@@ -56,7 +56,7 @@ reorientation configuration space can be found <a href="https://youtu.be/08bR-m4
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-07-23 01:17:30 US Mountain Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2018-07-23 01:44:07 US Mountain Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
